app/assets/stylesheets/pages.sass
@import template-data-gouv-main

@import shared/*
@import pages/*

// template overrides
.nav__item a#experts_login
  color: var(--theme-dark-text)
  border: 1px solid var(--theme-dark-text)

.navbar__domain
  display: flex
  justify-content: center
  flex-wrap: nowrap
  align-items: center
  span
    -webkit-padding-after: 3px
    padding-bottom: 1px
  img
    height: 40px

input[type=submit].button
  -webkit-appearance: none

footer
  .title
    display: flex
    align-content: center
  .logo-footer
    height: 3rem
    margin-right: 1rem
  .beta-link
    margin-left: 4rem
  .social-network
    display: flex
    img
      width: 2.5rem
    a:hover
      background: none
  .footer__links.social
    display: flex
    align-items: center

@media (max-width: 549px)
  .footer__links
    margin-bottom: 1rem
    h2
      font-size: 1.5rem
  .nav__item
    margin-bottom: 1rem
  .nav__links
    text-align: center
  .navbar__logo
    margin: 0
    height: 3rem
  .navbar__home
    height: auto
    display: flex
    flex-direction: column
    width: 100%
  .navbar__domain
    span
      font-size: 14px
    img
      height: 32px

.hero__container
  min-height: 0px
  h1.hero__title
    font-size: 1.7em
    text-align: center

.hero
  background: linear-gradient(45deg, #0053b3, #006be6)
  background: linear-gradient(45deg,var(--theme-primary), var(--theme-primary-light))
  .hero__container
    background: image-url('marianne-cover.svg') no-repeat
    background-size: auto 100%

section.section
  padding: 4em 0

span.navbar__domain
  white-space: nowrap // for IE11

//  landings index and show

section.section#section-thematiques
  background: linear-gradient(45deg, #0053b3, #006be6)
  background: linear-gradient(45deg,var(--theme-primary), var(--theme-primary-light))
  a:hover
    background: transparent
  .row + .row
    margin-top: 1.5em
    margin-top: var(--space-m)
  .card
    &.emphasis
      border: 1px solid #ab2b1e
      border: 1px solid var(--dark-red)
      .landing-title, .landing-description, .discover_button
        color: #ab2b1e
      button.primary
        border-color: #ab2b1e
        color: #ab2b1e

    display: flex
    flex-direction: column
    .card__content
      padding: 1em
    .discover_button
      margin-top: auto
      padding: 0 1em 1em
    a
      .landing-auto-description-container // unused for now
        .landing-title
          margin-bottom: 2em
        .landing-description
          margin: 0
          display: none
        &:hover
          .landing-title
            display: none
          .landing-description
            display: block
      text-decoration: none
      color: #0053b3
      color: var(--theme-primary)

      &:hover
        color: #00234d
        color: var(--theme-primary-dark)
        .landing-description
          text-decoration: underline

section.section#section-description
  h2
    font-size: 1.75rem
  p, a
    font-size: 1.5rem
  a
    margin: 1rem 0
  #logo-pde
    width: 7rem
  .button
    font-weight: bold

section.section#section-details
  a
    margin: 2rem 0
    font-weight: bold
  p, a
    font-size: 1.5rem
  h2
    font-size: 1.75rem

.logo-list
  width: 95%
  margin: 0 auto
  text-align: center
  img
    max-height: 70px
    max-width: 140px
    margin: 8px
    vertical-align: middle

section.section#section-retour
  padding: 1em 0
  h3
    margin: 0
    a
      color: initial
      background-color: initial
      text-decoration: none
      margin-left: 1rem
      &:before
        position: absolute
        left: -1rem
        content: "←"

section.section#section-formulaire
  .section__title
    text-align: initial
  form
    margin: initial
    .notification.error:empty
      display: none

.section#section-testimonials
  q
    font-style: italic
    quotes: "« " " »" "“" "”"
  .article__author
    padding: 0
  .row + .row
    margin-top: 1.5em
    margin-top: var(--space-m)
  .row .card
    max-width: 100%

.section#section-stats
  padding: 2em

.stats__item
  font-size: 1.2em

  .count
    margin-right: 0.2em
    font-size: 1.6em
    vertical-align: text-top

.grid#stats-charts
  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr))

.branding
  display: flex
  align-items: center
  justify-content: center
  #logo-pde
    width: 3rem
    margin-right: 1rem
  .url
    -webkit-padding-after: 3px
    display: flex
    align-items: center
    flex-wrap: nowrap
    white-space: nowrap
  .logo-beta
    height: 43px
  span
    font-size: 19px
    margin-bottom: 4px
    font-family: 'Evolventa', 'lato', 'sans-serif' !important
    font-weight: 400

@media (max-width: 549px)
  .branding
    flex-direction: column
    span
      font-size: 15px
    .logo-beta
      height: 36px

// IE fixes

@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none)
  img[src*=".svg"]
    width: 100%

